fix: improve code block styling, and customize scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -63,13 +63,25 @@
     background-color: var(--bg-900);
   }
 
-  main::-webkit-scrollbar {
+  /* Custom scrollbar  */
+  main,
+  pre {
+    scrollbar-width: thin;
+    scrollbar-color: var(--bg-800) var(--bg-900);
+  }
+
+  main::-webkit-scrollbar,
+  pre::-webkit-scrollbar {
     width: 10px;
   }
-  main::-webkit-scrollbar-track {
+
+  main::-webkit-scrollbar-track,
+  pre::-webkit-scrollbar-track {
     background-color: var(--bg-900);
   }
-  main::-webkit-scrollbar-thumb {
+
+  main::-webkit-scrollbar-thumb,
+  pre::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: var(--bg-800);
   }
